# ocr-server

./: .gitignore  pyproject.toml  test.py
boards/: admin.py  models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_initial.py  0003_board_file_link.py
config/: settings.py  urls.py
ocr/: urls.py  views.py
static/css/: grid.css  list.css
templates/: board_form.html  footer.html  header.html  index.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
